syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message CookRecipeData {
	uint32 recipe_id = 1;
	uint32 proficiency = 2;
}
