syntax = "proto3";

import "CookRecipeData.proto";
import "ItemParam.proto";

message PlayerCookRsp {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 180;
	}

	int32 retcode = 1;
	CookRecipeData recipe_data = 2;
	repeated ItemParam item_list = 3;
	uint32 qte_quality = 4;
	uint32 cook_count = 5;
	repeated ItemParam extral_item_list = 6;
}
